# pad

./: .cursorrules  .dockerignore  .env.example  .gitignore  AGENT.md  CHANGELOG.md  Cargo.toml  Containerfile.ubi  Dockerfile  README.md  deny.toml  docker-compose.yml  flake.nix  package-lock.json  package.json  pad.xml
.github/workflows/: build-and-deploy.yml  ci.yml  docker-publish.yml
assets/: manifest.json
assets/shared-assets/shared-rust/shared-frontend/src/components/: footer.rs  header.rs
backend/: Cargo.toml
backend/src/: config.rs  cookie_auth.rs  main.rs  middleware.rs  migration.rs  state.rs  tests.rs  ws.rs
backend/src/routes/: auth.rs  mod.rs  notepads_crud.rs  notepads_io.rs  pages.rs
backend/src/routes/auth/: handlers.rs  logout.rs  mod.rs  pin_required.rs  verify_pin.rs
backend/src/routes/notepads_crud/: create.rs  mod.rs  rename.rs
backend/src/services/: migration.rs
backend/src/tests/: mod.rs  property.rs  unit.rs
backend/src/ws/: handler.rs
backend/tests/: container_smoke.rs
frontend/: Cargo.toml  index.html  service-worker.js
frontend/Assets/: header.css  manifest.json  styles.css
frontend/Assets/shared-assets/shared-rust/shared-backend/: Cargo.toml
frontend/Assets/shared-assets/shared-rust/shared-core/: Cargo.toml
frontend/Assets/shared-assets/shared-rust/shared-frontend/: Cargo.toml
frontend/src/: api.rs  app.rs  collab.rs  collab_utils.rs  editor.rs  header.rs  i18n.rs  i18n_de_fr.rs  i18n_en_es.rs  i18n_ja_zh.rs  i18n_pt_ru.rs  login.rs  main.rs  modals.rs  preview.rs  search.rs  services.rs  settings.rs  storage.rs  types.rs
frontend/src/app/: update.rs  view.rs
frontend/src/components/: editor.rs  mod.rs  pin.rs
frontend/src/i18n/: de.rs  en.rs  es.rs  fr.rs  ja.rs  pt.rs  ru.rs  zh.rs
src/: main.rs  migration.rs  search.rs  state.rs  utils.rs  ws.rs
