[package]
name = "log"
version = "2.0.0"
edition = "2021"
authors = ["UberMetroid <admin@ubermetroid.com>"]
license = "Apache-2.0"
repository = "https://github.com/UberMetroid/Log"
homepage = "https://github.com/UberMetroid/Log"
description = "Axum backend service for Log."
readme = "../README.md"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
dotenvy = "0.15"
cookie = "0.18"
axum-extra = { version = "0.12", features = ["cookie"] }
futures-util = "0.3"
notify = "6.1"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = "0.3"
ipnet = "2.9"
percent-encoding = "2.3"
sha2 = "0.11"
