[package]
name = "backend"
version = "2.2.0"
edition = "2024"
authors = ["UberMetroid <admin@ubermetroid.com>"]
license = "Apache-2.0"
repository = "https://github.com/UberMetroid/pad"
homepage = "https://github.com/UberMetroid/pad"
description = "Axum backend service for pad."
readme = "../README.md"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
shared-assets = { path = "../frontend/Assets/shared-assets/shared-rust", version = "3.0.0" }
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
dotenvy = "0.15"
cookie = "0.18"
axum-extra = { version = "0.12", features = ["cookie"] }
futures-util = "0.3"
notify = "6.1"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = "0.3"
ipnet = "2.9"
percent-encoding = "2.3"
sha2 = "0.11"
