[package]
name = "backend"
version = "3.0.27"
edition = "2024"
authors = ["etecoons"]
license = "Apache-2.0"
repository = "https://github.com/etecoons/pad"
homepage = "https://github.com/etecoons/pad"
description = "Axum backend service for pad."
readme = "../README.md"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
shared-core = { git = "https://github.com/etecoons/shared-assets.git", tag = "v3.0.28" }
shared-backend = { git = "https://github.com/etecoons/shared-assets.git", tag = "v3.0.28" }
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# `cors` feature intentionally not enabled: shared-backend builds the CORS
# layer internally and we wire it via `cors_layer(&config)`. Enabling it here
# would be dead surface area.
tower-http = { version = "0.6", features = ["fs", "trace"] }
dotenvy = "0.15"
cookie = "0.18"
axum-extra = { version = "0.12", features = ["cookie"] }
futures-util = "0.3"
notify = "6.1"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = "0.3"
percent-encoding = "2.3"
sha2 = "0.11"
# Direct dependency on `constant_time_eq` for PIN comparison. The same crate
# is pulled in transitively by `shared-backend`, but declaring it here means a
# future refactor of shared-backend won't silently break our use of it.
constant_time_eq = "0.3"
