[package]
name = "rustpad-frontend"
version = "1.0.6"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = { version = "0.6", features = ["websocket", "http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
pulldown-cmark = "0.11"
futures-util = "0.3"
futures-channel = "0.3"
percent-encoding = "2.3"
web-sys = { version = "0.3", features = [
    "HtmlTextAreaElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlElement",
    "KeyboardEvent",
    "FocusEvent",
    "Window",
    "Document",
    "Location",
    "Navigator",
    "Clipboard",
    "Node",
    "NodeList",
    "Element",
    "NamedNodeMap",
    "Attr"
] }
