[package]
name = "log-frontend"
version = "2.0.0"
edition = "2021"
authors = ["UberMetroid <admin@ubermetroid.com>"]
license = "Apache-2.0"
repository = "https://github.com/UberMetroid/Log"
homepage = "https://github.com/UberMetroid/Log"
description = "Yew frontend application for Log."
readme = "../README.md"

[dependencies]
yew = { version = "0.23", features = ["csr"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = { version = "0.7", features = ["websocket", "http"] }
gloo-timers = { version = "0.4", features = ["futures"] }
futures-util = "0.3"
futures-channel = "0.3"
percent-encoding = "2.3"
web-sys = { version = "0.3", features = [
    "HtmlTextAreaElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlElement",
    "KeyboardEvent",
    "FocusEvent",
    "Window",
    "Document",
    "Location",
    "History",
    "UrlSearchParams",
    "Navigator",
    "Clipboard",
    "Node",
    "NodeList",
    "Element",
    "NamedNodeMap",
    "Attr"
] }
